--- a/html/home.html
+++ b/html/home.html
@@ -67,7 +67,7 @@
 			<ul>
 				<li><a href="home.html"target=>首页</a></li>
 				<li><a href="yourph.html"target="_blank">相册</a></li>
-				<li><a href="kk.html">开发中</a></li>
+				<li><a href="https://github.com/Muieay/Dotcpp"target="_blank">练习</a></li>
 				<li><a href="kk.html">开发中</a></li>
 				<li><a href="kk.html">开发中</a></li>
 			</ul>
