--- a/html/home.html
+++ b/html/home.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/animation.css"/>
 		<link rel="stylesheet" type="text/css" href="../css/footer.css"/>
 		<link rel="stylesheet" type="text/css" href="../css/music.css"/>
+		<script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script>
 		<title>My card</title>
 	</head>
 	<body>
