新增标题图标

--- a/html/home.html
+++ b/html/home.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/footer.css"/>
 		<link rel="stylesheet" type="text/css" href="../css/music.css"/>
 		<script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script>
+		<link rel="icon" href="../img/dier.png" />
 		<title>My card</title>
 	</head>
 	<body>
