--- a/html/home.html
+++ b/html/home.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/music.css"/>
 		<script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget@latest/autoload.js"></script>
 		<link rel="icon" href="../img/dier.png" />
-		<title>My card</title>
+		<title>YuCheng's Blog</title>
 	</head>
 	<body>
 		<!-- 1.隐藏侧边栏--------------------------------------------------------------------------------------- -->
