--- a/html/kk.html
+++ b/html/kk.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<link rel="icon" href="../img/dier.png" />
 		<title>开发中</title>
 		<meta http-equiv="refresh" content="3.5;home.html"/>
 		<style type="text/css">
