--- a/html/yourph.html
+++ b/html/yourph.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-
+    <link rel="icon" href="../img/dier.png" />
     <title>抽屉式相册</title>
     <link rel="stylesheet" href="../css/yourph.css">
 </head>
